fix(background): fix shifts text showing up

--- a/src/components/background/background.scss
+++ b/src/components/background/background.scss
@@ -1,5 +1,7 @@
 .background {
     &__content {
         position: absolute;
+        color: white;
+        font-size: 0;
     }
 }
